--- a/AppCmder.uplugin
+++ b/AppCmder.uplugin
@@ -14,6 +14,7 @@
 	"IsBetaVersion": false,
 	"IsExperimentalVersion": false,
 	"Installed": false,
+	"SupportedTargetPlatforms": [ "Android" ],
 	"Modules": [
 		{
 			"Name": "AppCmder",
